[gd_scene load_steps=5 format=3 uid="uid://dr4h8ibkcec08"]

[ext_resource type="Script" path="res://scenes/win_area_level_1.gd" id="1_uf31p"]
[ext_resource type="Texture2D" uid="uid://chgqimvh7rdh6" path="res://assets/Familiar Looking Rocket.png" id="2_vb8vy"]
[ext_resource type="PackedScene" uid="uid://cupi20tdmqvb" path="res://scenes/WinScreen.tscn" id="3_36dct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0cone"]
size = Vector2(287, 472)

[node name="WinAreaLevel1" type="Area2D"]
script = ExtResource("1_uf31p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vb8vy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 3)
shape = SubResource("RectangleShape2D_0cone")

[node name="WinScreen" parent="." instance=ExtResource("3_36dct")]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
